--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "volunteerApp",
   "version": "0.0.0",
-  "main": "app.js",
+  "main": "bin/www/",
   "author": "Tyler Alves",
   "license": "MIT",
   "private": true,
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.3.3",
     "body-parser": "~1.13.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
